--- a/hello-k8s.yml
+++ b/hello-k8s.yml
@@ -1,41 +1,40 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: internal-auth-web-service
-  labels:
-    app: internal-auth-web-service
+  name: hello-k8s
 spec:
-  type: LoadBalancer
-  ports:
-    - name: http
-      port: 80
-      targetPort: 9080
-    - name: https
-      port: 443
-      targetPort: 9443
-  selector:
-    app: internal-auth-web
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 8080
+  selector:
+    app: hello-k8s
 ---
-  apiVersion: apps/v1
-  kind: Deployment
-  metadata:
-    name: internal-auth-web-deployment
-  spec:
-    replicas: 3
-    selector:
-      matchLabels:
-        app: internal-auth-web
-    template:
-      metadata:
-        labels:
-          app: internal-auth-web
-      spec:
-        containers:
-        - name: internal-auth-web
-          image: 303949471338.dkr.ecr.ap-northeast-1.amazonaws.com/internal-auth-web:aurora-static-v0
-          ports:
-          - containerPort: 9080
-          env:
-          - name: TZ          
-            valueFrom: Asia/Tokyo 
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: hello-k8s
+spec:
+  replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 2
+      maxSurge: 2
+  selector:
+    matchLabels:
+      app: hello-k8s
+  template:
+    metadata:
+      labels:
+        app: hello-k8s
+    spec:
+      containers:
+        - name: hello-k8s
+          image: CONTAINER_IMAGE
+          securityContext:
+            privileged: false
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+          ports:
+            - containerPort: 8080
