--- a/hello-k8s.yml
+++ b/hello-k8s.yml
@@ -7,7 +7,8 @@ spec:
   ports:
     - port: 80
       targetPort: 9080
-  selector:
+#      targetPort: 9080
+selector:
     app: hello-k8s
 ---
 apiVersion: apps/v1
@@ -32,9 +33,11 @@ spec:
       containers:
         - name: hello-k8s
           image: 303949471338.dkr.ecr.ap-northeast-1.amazonaws.com/internal-auth-web:aurora-static-v0
+#          image: CONTAINER_IMAGE
 #          securityContext:
 #            privileged: false
 #            readOnlyRootFilesystem: true
 #            allowPrivilegeEscalation: false
           ports:
             - containerPort: 9080
+#            - containerPort: 9080
